--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">Stephen Chau</h1>
+                <h1 class="mb-1">Hello,</h1>
+                <h1 class="mb-1">I'm Stephen Chau</h1>
                 <h3 class="mb-5">
-                    <em>Frontend/Full stack developer</em>
+                    <em>and I'm into web development!</em>
                 </h3>
                 <a class="btn btn-primary btn-xl" href="#about"
-                    >Find Out More</a
+                    >Know more about me</a
                 >
             </div>
         </header>
@@ -86,9 +87,8 @@
                                                         >Name:
                                                     </span>
                                                     <span
-                                                        >TszChing Chau
-                                                        (Stephen)</span
-                                                    >
+                                                        >TszChing(Stephen) Chau
+                                                    </span>
                                                 </p>
                                                 <p>
                                                     <span class="title-s"
@@ -199,7 +199,7 @@
                     <h2 class="mb-5">My academic experiences</h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
-                    <div class="col-lg-6 col-md-6 mb-5 mb-lg-0">
+                    <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"
                             ><i class="icon-graduation"></i
                         ></span>
@@ -209,16 +209,14 @@
                             B.S. in Computer Science & Minor in Mathematics
                         </p>
                     </div>
-                    <!-- <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                    <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"
                             ><i class="icon-pencil"></i
                         ></span>
-                        <h4><strong>Redesigned</strong></h4>
-                        <p class="text-faded mb-0">
-                            Freshly redesigned for Bootstrap 5.
-                        </p>
-                    </div> -->
-                    <div class="col-lg-6 col-md-6 mb-5 mb-md-0">
+                        <h4><strong>Honored society</strong></h4>
+                        <p class="text-faded mb-0">Kappa Mu Epsilon</p>
+                    </div>
+                    <div class="col-lg-4 col-md-12 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"
                             ><i class="icon-eyeglass"></i
                         ></span>
