--- a/index.html
+++ b/index.html
@@ -213,14 +213,14 @@
                         <span class="service-icon rounded-circle mx-auto mb-3"
                             ><i class="icon-pencil"></i
                         ></span>
-                        <h4><strong>Honored society</strong></h4>
+                        <h4><strong>Honor Society</strong></h4>
                         <p class="text-faded mb-0">Kappa Mu Epsilon</p>
                     </div>
                     <div class="col-lg-4 col-md-12 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"
                             ><i class="icon-eyeglass"></i
                         ></span>
-                        <h3><strong>Research experiences</strong></h3>
+                        <h3><strong>Research Experience</strong></h3>
                         <p class="text-faded mb-0">
                             Study of BirdNET's performance on avian species
                             detection
