--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
             </div>
         </section> -->
         <!-- Portfolio-->
+        <!-- After click -> modal, tech stack, time, detailed description, github link, photo -->
         <section class="content-section" id="portfolio">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
