--- a/index.html
+++ b/index.html
@@ -428,34 +428,34 @@
                     switch (projectName) {
                         case "Jchannel":
                             return `
-                                <p>Details about Jchannel project.</p>
+                                <h4>Details about Jchannel project.</h4>
                                 <p><strong>Project Date:</strong> January 2022</p>
                                 <p><strong>Repository:</strong> <a href="https://github.com/yourusername/jchannel" target="_blank">Jchannel on GitHub</a></p>
-                                <p><strong>Detailed Description:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lorem non nulla consectetur bibendum.</p>
+                                <p><strong>Detailed Description:</strong> A online forum just for Jessup comminuty.</p>
                                 <p><strong>Tech Stack:</strong> HTML, CSS, JavaScript, Node.js</p>
                             `;
                         case "Devlytics":
                             return `
-                                <p>Details about Devlytics project.</p>
+                                <h4>Details about Devlytics project.</h4>
                                 <p><strong>Project Date:</strong> March 2022</p>
                                 <p><strong>Repository:</strong> <a href="https://github.com/yourusername/devlytics" target="_blank">Devlytics on GitHub</a></p>
-                                <p><strong>Detailed Description:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lorem non nulla consectetur bibendum.</p>
+                                <p><strong>Detailed Description:</strong> A web tool for company recruiters to short list candidates effectively by analyzing programming experiences in GitHub.</p>
                                 <p><strong>Tech Stack:</strong> Python, Flask, AI/ML</p>
                             `;
                         case "AI tools":
                             return `
-                                <p>Details about AI tools project.</p>
+                                <h4>Details about AI tools project.</h4>
                                 <p><strong>Project Date:</strong> May 2022</p>
                                 <p><strong>Repository:</strong> <a href="https://github.com/yourusername/ai-tools" target="_blank">AI tools on GitHub</a></p>
-                                <p><strong>Detailed Description:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lorem non nulla consectetur bibendum.</p>
+                                <p><strong>Detailed Description:</strong> Visualize neural network.</p>
                                 <p><strong>Tech Stack:</strong> Python, TensorFlow, React</p>
                             `;
                         case "BirdNET Research":
                             return `
-                                <p>Details about BirdNET Research project.</p>
+                                <h4>Details about BirdNET Research project.</h4>
                                 <p><strong>Project Date:</strong> August 2022</p>
                                 <p><strong>Repository:</strong> <a href="https://github.com/yourusername/birdnet-research" target="_blank">BirdNET Research on GitHub</a></p>
-                                <p><strong>Detailed Description:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lorem non nulla consectetur bibendum.</p>
+                                <p><strong>Detailed Description:</strong> Run tests with BirdNET and evaluate it's performance.</p>
                                 <p><strong>Tech Stack:</strong> Java, Spring Boot, React</p>
                             `;
                         default:
