--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-        <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Stephen Chau</title>
+        <title>Stephen Chau - Web Developer</title>
+        <meta
+            name="description"
+            content="Web developer specializing in frontend and full-stack development. Check out my portfolio and academic experiences."
+        />
+
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -74,9 +78,9 @@
                                         <div class="col-sm-6 col-md-5">
                                             <div class="about-img">
                                                 <img
-                                                    src="assets/img/testimonial-2.jpg"
+                                                    src="assets/img/Stephen.png"
                                                     class="img-fluid rounded b-shadow-a"
-                                                    alt=""
+                                                    alt="Stephen Chau - Web Developer"
                                                 />
                                             </div>
                                         </div>
@@ -353,7 +357,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">Download my resume here!</h2>
                 <a
-                    class="btn btn-xl btn-light me-4"
+                    class="btn btn-xl btn-light"
                     href=".\assets\Stephen Chau.pdf"
                     download=".\assets\Stephen Chau.pdf"
                     >Download</a
